# CLI-Mangasearch

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  README  README.md  main.cpp
include/: manga.h  shelf.h
src/: main.cpp  manga.cpp  shelf.cpp
src/C++/: Book.h  Library.cpp  main.cpp
